--- a/.github/workflows/drift_check_workflow.yml
+++ b/.github/workflows/drift_check_workflow.yml
@@ -1,8 +1,8 @@
 name: Sentinel Cloud Monitor
 
 on:
-  push:
-    branches: [ "main" ]
+#  push:
+#    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
