--- a/.github/workflows/drift_check_workflow.yml
+++ b/.github/workflows/drift_check_workflow.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       # 1. We build the Docker image right here on GitHub's servers
-      # This uses THEIR bandwidth, not yours.
+      # This uses THEIR bandwidth, not mine.
       - name: Build Sentinel Docker Image
         run: docker build -t vfi_monitor .
 
@@ -46,7 +46,7 @@ jobs:
           echo "STATUS: $(cat temp_status/status.txt)"
           echo "DRIFT SCORE: $(cat temp_status/score.txt)%"
           
-      # 5. (Optional) Upload the Database so you can download it later
+      # 5. (Optional) Upload the Database so I can download it later
       # This lets you run the Dashboard locally without running the heavy Docker container
       - name: Upload Logs
         uses: actions/upload-artifact@v4
